# ChangeLog for sys-auth/pam_skey
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_skey/ChangeLog,v 1.1 2008/01/16 07:18:25 ulm Exp $

*pam_skey-1.1.4 (16 Jan 2008)

  16 Jan 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +pam_skey-1.1.4.ebuild:
  Import from Sunrise overlay. Original ebuild and patch contributed by
  Dani Church <dani.church@gmail.com>, Jakub Moc <jakub@gentoo.org> and	me,
  bug 55279.
