@@ -3,14 +3,20 @@ Hash: SHA1
 
 DIST pam_skey-1.1.4-gentoo.patch.bz2 12813 RMD160 459b0a4c4c4e9ab71a9dbd3e4bbb555d6a3f10b9 SHA1 8eafb39367e6b8f7a2ba041eec20104be1f6fd18 SHA256 a811cc7647f6fe8563583d8b9c238b4bf327767e563d1edfdaee50dd258eb3db
 DIST pam_skey-1.1.4.tar.gz 82861 RMD160 ea195cbe4cd188d223d3bb7d0ffc51be0f3fc713 SHA1 289641fcbb4118f9ad3ce246e6ed07804ddd0125 SHA256 625e255e8c7ac27a85e2336d64cec46a83e246fe96e3e851c685dbf870c359bc
-EBUILD pam_skey-1.1.4.ebuild 1229 RMD160 dcf94b53a9943d9e26836da57f8b72c42968f4ef SHA1 4057e67e77181c45d1b2b6552d109dc6933e8d4a SHA256 59a21bfe74ff94d498823f2fa87e5f7793fa4d3b77f2ee2f2c6d60141ac08a83
-MD5 ec8e67106a2e98200cd9d73fe8785811 pam_skey-1.1.4.ebuild 1229
-RMD160 dcf94b53a9943d9e26836da57f8b72c42968f4ef pam_skey-1.1.4.ebuild 1229
-SHA256 59a21bfe74ff94d498823f2fa87e5f7793fa4d3b77f2ee2f2c6d60141ac08a83 pam_skey-1.1.4.ebuild 1229
-MISC ChangeLog 485 RMD160 4c8aa4a321812c857e3c0cb6746521914340e07e SHA1 c271f971edd430823c12c35579feea6f12afabac SHA256 508e2506c9d91a0525996f2a05a88fad571b4aa46d29c8618983e28b6b7671ed
-MD5 a67a23832e233d1aa412d90961896199 ChangeLog 485
-RMD160 4c8aa4a321812c857e3c0cb6746521914340e07e ChangeLog 485
-SHA256 508e2506c9d91a0525996f2a05a88fad571b4aa46d29c8618983e28b6b7671ed ChangeLog 485
+DIST pam_skey-1.1.5-gentoo.patch.bz2 8172 RMD160 f48effea57d6f0b21e1e105aeb00c20b06fa02c2 SHA1 a7e9080334a0405b1973d84824d9aa6e82c54c97 SHA256 c5ab0968ea109d1beb238a0a0ae9b244f7c762367c0e5a975a534e2d574db8c2
+DIST pam_skey-1.1.5.tar.gz 76963 RMD160 40e729277c8c6bd960d1ca8aade52dad9bc8fb2c SHA1 5ed6408ce660acdbe5018a87962bab66f67a30ab SHA256 31f56a85780aa59326c7da891687af3820e997a80805dc47171175481f3762f7
+EBUILD pam_skey-1.1.4.ebuild 1238 RMD160 2c4f04fa00bf80a36e929b87e085d878568ecd39 SHA1 0ea453e7aa42ec61d01ed42b9f314f1470f05cd6 SHA256 c32a85baa27d99164afd4fe811f34396bf7540d04bc7c8b7d915f3714fc7bce9
+MD5 30876ae8cfa9ca07a9af4c9f65251dd1 pam_skey-1.1.4.ebuild 1238
+RMD160 2c4f04fa00bf80a36e929b87e085d878568ecd39 pam_skey-1.1.4.ebuild 1238
+SHA256 c32a85baa27d99164afd4fe811f34396bf7540d04bc7c8b7d915f3714fc7bce9 pam_skey-1.1.4.ebuild 1238
+EBUILD pam_skey-1.1.5.ebuild 1310 RMD160 28e0467e99b81cf5739d25adc35e2026c1d16fc3 SHA1 8131cb658c17a7bdb882178ea8d3f4fa6d2e3d44 SHA256 e2cb8b9769b480455030689fa31d5becdcae3bf0bf2807392b122815efd1ce24
+MD5 af4d68ffea037962d2f2c75dd8373dce pam_skey-1.1.5.ebuild 1310
+RMD160 28e0467e99b81cf5739d25adc35e2026c1d16fc3 pam_skey-1.1.5.ebuild 1310
+SHA256 e2cb8b9769b480455030689fa31d5becdcae3bf0bf2807392b122815efd1ce24 pam_skey-1.1.5.ebuild 1310
+MISC ChangeLog 776 RMD160 02bf5bf8b1152016b18811ebf95ad447435645a4 SHA1 18abaa9c3c9ede8a67fdc1325e3060e920e770c7 SHA256 80b743a213ffffeacff32296582da9abe2cfe71cd84a23c6fa04cf718ca2b917
+MD5 4c2aeff809ef79b8f3c5844bfad09416 ChangeLog 776
+RMD160 02bf5bf8b1152016b18811ebf95ad447435645a4 ChangeLog 776
+SHA256 80b743a213ffffeacff32296582da9abe2cfe71cd84a23c6fa04cf718ca2b917 ChangeLog 776
 MISC metadata.xml 215 RMD160 0851276a2aff894fddae9709aa8a76866f697690 SHA1 b055937f4a3294e329309cd8d16fa36ae81554c9 SHA256 01372888f3f3906e23fcf018b7c541cafafd831d50c87e1def9598306e514933
 MD5 3f63c5108dfe1a80f333cf21f7c5996d metadata.xml 215
 RMD160 0851276a2aff894fddae9709aa8a76866f697690 metadata.xml 215
@@ -18,10 +24,13 @@ SHA256 01372888f3f3906e23fcf018b7c541cafafd831d50c87e1def9598306e514933 metadata
 MD5 8578b54b474c0d5839b84f820e6eecca files/digest-pam_skey-1.1.4 512
 RMD160 4c82ca7b4c9aa3900356057503d996372ed5d7c6 files/digest-pam_skey-1.1.4 512
 SHA256 3c6df7bf85e1bcf8d2db4e5e042db930321d0c65b1fde4b71885f12b9279d416 files/digest-pam_skey-1.1.4 512
+MD5 41eaca5626c1cc31ebe4e7e42ecb7309 files/digest-pam_skey-1.1.5 509
+RMD160 a53b1482793fd2a86501a2bafa72982ec25293d4 files/digest-pam_skey-1.1.5 509
+SHA256 306af757c01c1c786670ee132a824b79a6d7e912003f83f27fe4bfa025d98dfa files/digest-pam_skey-1.1.5 509
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.8 (GNU/Linux)
 
-iEYEARECAAYFAkeNr98ACgkQOeoy/oIi7uwZtQCeKWjD0iQ7LcK2se1FSA1mAd/F
-H+oAoIoa3B9RhUffefcgPUuHow6Txn/N
-=lUy9
+iEYEARECAAYFAkePSSkACgkQOeoy/oIi7uwevgCeJ8A+8r5LCjX+YS1SwjhfAOrT
+/1UAoOo/cFvm+F4rwxtR7lr9YW6hqeXu
+=azZL
 -----END PGP SIGNATURE-----
