@@ -1,0 +1,6 @@
+MD5 a7b9c03a6c573db706498fc660e9af6c pam_skey-1.1.5-gentoo.patch.bz2 8172
+RMD160 f48effea57d6f0b21e1e105aeb00c20b06fa02c2 pam_skey-1.1.5-gentoo.patch.bz2 8172
+SHA256 c5ab0968ea109d1beb238a0a0ae9b244f7c762367c0e5a975a534e2d574db8c2 pam_skey-1.1.5-gentoo.patch.bz2 8172
+MD5 e201046a055efee5e7fb9ef5fc2ef9e6 pam_skey-1.1.5.tar.gz 76963
+RMD160 40e729277c8c6bd960d1ca8aade52dad9bc8fb2c pam_skey-1.1.5.tar.gz 76963
+SHA256 31f56a85780aa59326c7da891687af3820e997a80805dc47171175481f3762f7 pam_skey-1.1.5.tar.gz 76963
