@@ -1,6 +1,13 @@
 # ChangeLog for sys-auth/pam_skey
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_skey/ChangeLog,v 1.1 2008/01/16 07:18:25 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/pam_skey/ChangeLog,v 1.2 2008/01/17 12:24:52 ulm Exp $
+
+*pam_skey-1.1.5 (17 Jan 2008)
+
+  17 Jan 2008; Ulrich Mueller <ulm@gentoo.org> +pam_skey-1.1.5.ebuild:
+  Version bump; base Gentoo patch on the current upstream version. Fix gcc
+  warnings about type-punned pointers. Rebuild configure and headers with
+  autotools, instead of patching them.
 
 *pam_skey-1.1.4 (16 Jan 2008)
 
